# FOSSDEV

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: DOMAIN.md
scripts/: check_deps.py
src/: app.py  calc.py  example.py  service.py
src/mortgage_calc/: __init__.py  calculator.py  cli.py  formatter.py  types.py
tests/: conftest.py  test_calc.py  test_calculator.py  test_cli.py  test_example.py  test_formatter.py  test_service.py
